# taskboard

./: .gitignore
backend/: .env.example  API_DOCUMENTATION.md  Cargo.toml
backend/migrations/: 20260101000001_create_users.sql  20260101000002_create_refresh_tokens.sql  20260101000003_create_calendars.sql  20260101000004_create_calendar_members.sql  20260101000005_create_tasks.sql  20260101000006_create_task_assignees.sql  20260101000007_create_task_labels.sql  20260101000008_create_task_comments.sql
backend/src/: config.rs  errors.rs  main.rs  routes.rs  utils.rs
backend/src/handlers/: auth.rs  calendar.rs  mod.rs  task.rs
backend/src/middleware/: auth.rs
backend/src/models/: auth.rs  calendar.rs  task.rs
backend/src/repository/: auth.rs  calendar.rs  task.rs
