[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4"
actix-rt = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "macros",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"

# ID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Environment
dotenv = "0.15"

# Error handling
thiserror = "1"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Hashing & random
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# Logging
log = "0.4"
env_logger = "0.11"

# Futures
futures = "0.3"
